# symradar

./: .gitignore  README.md  symradar  uni-klee
CPR/: .gitignore  Dockerfile  README.md  activate  build.sh  filtered.json  pyrightconfig.json  requirements.txt
CPR/app/: builder.py  concolic.py  synthesis.py  values.py
CPR/experiments/: .gitignore  driver.py
CPR/lib/: ExtractFix.cpp  Makefile  MetadataExtractor.cpp  MetadataExtractor.h  UniKleeGlobalVariablePass.cpp  argv-fuzz-inl.h  cpr_runtime.c  uni_klee_memory_check.c  uni_klee_memory_check.h  uni_klee_runtime.c  uni_klee_runtime.h  uni_klee_runtime_new.c
CPR/patches/: .gitignore  memo  meta-data.json  meta-data.toml
CPR/scripts/: .gitignore  README.md  bin-index-diff.py  experiments.py  meta.py  patch.py  prepare-pacfix.py  run.sh  server.py  symfeas.py  sympatch.py  symradar.py  symutil.py  symvass.py  testm.py  uni-klee.py  uni_klee.py
CPR/tools/: cpr-cc  cpr-cxx
VulMaster/: .gitignore  CWE_data_from_homepage.csv  README.md  calculate_metrics_all_models.py  chatgpt_api_generate_fix.py  read_cwe_tree.py  requirements.txt  setup.sh  test_model.py  train_model.py
VulMaster/benchmarks/: README.md
VulMaster/setup/: cwe_tree.json  gen-data-extractfix.py  prepare_vulmasters_data.py  read_cwe_tree.py  treevul_cwe_tree.json
VulMaster/src/: data.py  model.py  options.py  util.py
VulMaster/vulfix_data/: read.py  valid.json
spider/: .gitignore  README.md  build.xml  requirements.txt
spider/joern/: .gitignore  build.xml  genParsers.sh
symradar/: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  OUTPUT.md  README.md  build.sh
symradar/lib/: CMakeLists.txt
symradar/scripts/: clang-format.py  parse-struct.py  split-args.py
symradar/workenv/: Dockerfile
uni-klee/: .gitmodules  CMakeLists.txt  Dockerfile  OUTPUT.md  README.md
uni-klee/examples/: .gitignore
uni-klee/scripts/: compare-snapshots.py  format-json.py  hex-to-decimal.py  precondition.py
uni-klee/tools/: CMakeLists.txt
uni-klee/tools/klee/: CMakeLists.txt  main.cpp
uni-klee/tools/uni-klee/: CMakeLists.txt  main.cpp
(+2027 files in other folders)
